# serializer version: 1
# name: test_entities[sensor.spotify_spotify_1_song_acousticness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_acousticness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song acousticness',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'acousticness',
    'unique_id': '1112264111_acousticness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_acousticness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song acousticness',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_acousticness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.1',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_danceability-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_danceability',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song danceability',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'danceability',
    'unique_id': '1112264111_danceability',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_danceability-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song danceability',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_danceability',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '69.6',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_energy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_energy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song energy',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'energy',
    'unique_id': '1112264111_energy',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song energy',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '90.5',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_instrumentalness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_instrumentalness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song instrumentalness',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'instrumentalness',
    'unique_id': '1112264111_instrumentalness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_instrumentalness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song instrumentalness',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_instrumentalness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0905',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_key-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'C',
        'C♯/D♭',
        'D',
        'D♯/E♭',
        'E',
        'F',
        'F♯/G♭',
        'G',
        'G♯/A♭',
        'A',
        'A♯/B♭',
        'B',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_key',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Song key',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'key',
    'unique_id': '1112264111_key',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_key-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Spotify spotify_1 Song key',
      'options': list([
        'C',
        'C♯/D♭',
        'D',
        'D♯/E♭',
        'E',
        'F',
        'F♯/G♭',
        'G',
        'G♯/A♭',
        'A',
        'A♯/B♭',
        'B',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_key',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'D♯/E♭',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_liveness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_liveness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song liveness',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'liveness',
    'unique_id': '1112264111_liveness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_liveness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song liveness',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_liveness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.2',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'major',
        'minor',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Song mode',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'mode',
    'unique_id': '1112264111_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Spotify spotify_1 Song mode',
      'options': list([
        'major',
        'minor',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'major',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_speechiness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_speechiness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song speechiness',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'speechiness',
    'unique_id': '1112264111_speechiness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_speechiness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song speechiness',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_speechiness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.3',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_tempo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_tempo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song tempo',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'song_tempo',
    'unique_id': '1112264111_bpm',
    'unit_of_measurement': 'bpm',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_tempo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song tempo',
      'unit_of_measurement': 'bpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_tempo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '114.944',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_time_signature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '3/4',
        '4/4',
        '5/4',
        '6/4',
        '7/4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_time_signature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Song time signature',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'time_signature',
    'unique_id': '1112264111_time_signature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_time_signature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Spotify spotify_1 Song time signature',
      'options': list([
        '3/4',
        '4/4',
        '5/4',
        '6/4',
        '7/4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_time_signature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4/4',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_valence-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spotify_spotify_1_song_valence',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Song valence',
    'platform': 'spotify',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'valence',
    'unique_id': '1112264111_valence',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor.spotify_spotify_1_song_valence-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spotify spotify_1 Song valence',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spotify_spotify_1_song_valence',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '62.5',
  })
# ---
